# cmuts

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  TODO.md  cmuts.c  cmuts.h  configure  h5utils.c  h5utils.h  htsutils.c  htsutils.h  index.html  mkdocs.yaml  pyproject.toml  requirements-docs.txt  requirements.txt  setup.py  sitemap.xml
.github/workflows/: release.yml  space.yml  tests.yml
architecture/: index.html
benchmarks/: accuracy.py  correctness.py  external.py  index.html  profile.py  profiles.py  tool-vs-structure.py  tool-vs-tool.py
completions/: _cmuts  cmuts.bash
conda-recipe/: build.sh  meta.yaml
config/: cmuts_args.json  tests_args.json
count/: ambig  ambig.c  bseq.c  bseq.h  cmuts.c  cmuts.h  h5utils.c  h5utils.h  htsutils.c  htsutils.h
docs/: architecture.md  benchmarks.md  index.md
docs/installation/: basic-installation.md  installation.md  mpi-installation.md  org-notes.md  requirements.md
docs/usage/: cmuts-align.md  cmuts-core.md  cmuts-generate.md  cmuts-normalize.md  cmuts-plot.md  cmuts-test.md  cmuts-visualize.md  cmuts.md  examples.md  pipeline.md
examples/map-seq/: COMMANDS  cleanup  run
examples/map-seq/fastq/: bicine-2A3.fastq  bicine-DMS.fastq  bicine-ETH.fastq
examples/plot/: COMMANDS
examples/visualize/: COMMANDS  profile.h5  ref.fasta
installation/basic-installation/: index.html
installation/installation/: index.html
installation/mpi-installation/: index.html
installation/org-notes/: index.html
installation/requirements/: index.html
scripts/: generate_args.py  generate_completions.py  generate_docs.py  generate_usage.py
search/: search_index.json
src/: bam.cpp  bam.hpp  cmuts-normalize  cmuts-stats  cmuts.cpp  cmuts.hpp  common.cpp  common.hpp  cram.cpp  cram.hpp  fasta.cpp  hdf5.cpp  hdf5.hpp  hts.cpp  hts.hpp  main.cpp  main.hpp  mpi.cpp  mpi.hpp  tests.cpp  tests.hpp  tiny.cpp  tiny.hpp  utils.cpp  utils.hpp
src/cpp/: bam.cpp  bam.hpp  cmuts.cpp  cmuts.hpp  common.cpp  common.hpp  cram.cpp  cram.hpp  fasta.cpp  fasta.hpp  hdf5.hpp  main.cpp  main.hpp  mpi.cpp  mpi.hpp  mutex.cpp  mutex.hpp  options.hpp  tests.cpp  tests.hpp  utils.cpp  utils.hpp
src/cpp/app/: main.cpp  main.hpp  tests.cpp  tests.hpp
src/cpp/compat/: common.hpp
src/cpp/core/: cmuts.cpp  cmuts.hpp  options.hpp
src/cpp/infra/: logging.cpp  logging.hpp  mpi.cpp  mpi.hpp  mutex.cpp  mutex.hpp  utils.cpp  utils.hpp
src/cpp/io/: bam.cpp  bam.hpp  cram.cpp  cram.hpp  fasta.cpp  fasta.hpp  hdf5.cpp  hdf5.hpp
src/cpp/io/common/: alignment.hpp  file.hpp  stream.hpp  types.hpp
src/python/: cmuts-normalize  cmuts-pairwise  cmuts-plot  cmuts-test-compare  cmuts-visualize  cov.py  vis.py
src/python/cmuts/: __init__.py  internal.py  output.py  plotting.py  vis.py
src/python/cmuts/normalize/: __init__.py  __main__.py  schemes.py
src/python/cmuts/visualize/: __init__.py  _transforms.py  plotly.py  plotting.py  structure.py  vis.py
src/scripts/: __init__.py  cmuts  cmuts-align  cmuts-cov  cmuts-generate  cmuts-merge  cmuts-normalize  cmuts-stats  cmuts-test  cov.py  profile
tests/: compare.py  profile  run
tests/accuracy/: compare.py  run
tests/exp/: compare.py  run
tests/exp/data/mod/: bicine-2A3.bam  bicine-DMS.bam
tests/exp/data/nomod/: bicine-DMSO.bam  bicine-ETH.bam
tests/exp/data/pk50/: aln.bam
tests/performance/: run
tests/python/: conftest.py  helpers.py  test_core.py  test_cram_ultima.py  test_denominator_fix.py  test_normalize.py  test_plotly.py  test_plotting.py  test_probingdata.py  test_schemes.py  test_tokenize.py
tests/python/fixtures/: ultima_softclip.cram  ultima_softclip.fasta
tests/syn/: compare.py  profile  run
usage/cmuts/: index.html
usage/cmuts-align/: index.html
usage/cmuts-core/: index.html
usage/cmuts-generate/: index.html
usage/cmuts-normalize/: index.html
usage/cmuts-plot/: index.html
usage/cmuts-test/: index.html
usage/cmuts-visualize/: index.html
usage/examples/: index.html
usage/pipeline/: index.html
